[project]
name = "pinchana-tiktok"
version = "0.1.0"
description = "TikTok scraper service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pinchana-core",
    "yt-dlp>=2026.3.17",
    "fastapi>=0.136.1",
    "httpx>=0.27.0",
    "pydantic>=2.13.3",
    "uvicorn>=0.46.0",
]

[tool.uv.sources]
pinchana-core = { path = "../pinchana-core" }

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
