[project]
name = "pinchana-tiktok"
version = "0.2b0"
description = "TikTok scraper service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pinchana-core",
    "yt-dlp>=2026.6.9",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "tenacity>=9.1.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.sources]
pinchana-core = { path = "../pinchana-core" }

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
